initial app and documentation skeleton

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,9 @@ license = Apache_2_0
 copyright_holder = David Golden
 copyright_year   = 2011
 
+[AppendExternalData]
+source_dir = pod
+
 [@DAGOLDEN]
 :version = 0.018
 
