update meta to fix up bugtracker

--- a/dist.ini
+++ b/dist.ini
@@ -7,8 +7,14 @@ copyright_year   = 2011
 [AppendExternalData]
 source_dir = pod
 
-[@DAGOLDEN]
+[Bugtracker]
+web = http://github.com/dagolden/%s/issues
+mailto = devnull@example.com
+
+[@Filter]
+-bundle = @DAGOLDEN
+-remove = Bugtracker
 :version = 0.018
 
-[CriticTests]
+[Test::Perl::Critic]
 
