add developers notes on CLI (but mark for pruning)

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,9 @@ source_dir = pod
 web = http://github.com/dagolden/%s/issues
 mailto = devnull@example.com
 
+[PruneFiles]
+match = ^dev_notes/.*
+
 [@Filter]
 -bundle = @DAGOLDEN
 -remove = Bugtracker
