Rename dist back to 'pantry'\
Things like the github issue tracker URL and other metadata are
based on the distribution name and that is lower case.  The actual
name doesn't really matter, so if it's simpler to keep it lower case,
so be it.

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = Pantry
+name    = pantry
 author  = David Golden <dagolden@cpan.org>
 license = Apache_2_0
 copyright_holder = David Golden
