--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = pantry
+name    = Pantry
 author  = David Golden <dagolden@cpan.org>
 license = Apache_2_0
 copyright_holder = David Golden
@@ -14,10 +14,16 @@ mailto = devnull@example.com
 [PruneFiles]
 match = ^dev_notes/.*
 
+[Test::PodSpelling]
+stopwords = subcommand
+stopwords = OpenSSH
+stopwords = littlechef
+stopwords = subshell
+stopwords = wildcard
+
 [@Filter]
 -bundle = @DAGOLDEN
 -remove = Bugtracker
+-remove = Test::PodSpelling
 :version = 0.018
-
-[Test::Perl::Critic]
 
