added USAGE section to docs

--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,7 @@ stopwords = OpenSSH
 stopwords = littlechef
 stopwords = subshell
 stopwords = wildcard
+stopwords = DNS
 
 [@Filter]
 -bundle = @DAGOLDEN
