updated dist.ini for bugtracker and stopwords

--- a/dist.ini
+++ b/dist.ini
@@ -7,24 +7,18 @@ copyright_year   = 2011
 [AppendExternalData]
 source_dir = pod
 
-[Bugtracker]
-web = http://github.com/dagolden/%s/issues
-mailto = devnull@example.com
-
 [PruneFiles]
 match = ^dev_notes/.*
 
-[Test::PodSpelling]
+[@DAGOLDEN]
+:version = 0.028
+no_bugtracker = 1
 stopwords = subcommand
 stopwords = OpenSSH
 stopwords = littlechef
 stopwords = subshell
 stopwords = wildcard
 stopwords = DNS
-
-[@Filter]
--bundle = @DAGOLDEN
--remove = Bugtracker
--remove = Test::PodSpelling
-:version = 0.018
+stopwords = subkeys
+stopwords = runlist
 
