updated docs, coverage skips, stopwords, and README

--- a/dist.ini
+++ b/dist.ini
@@ -13,13 +13,14 @@ match = ^dev_notes/.*
 [@DAGOLDEN]
 :version = 0.028
 no_bugtracker = 1
-stopwords = subcommand
-stopwords = OpenSSH
-stopwords = littlechef
-stopwords = subshell
-stopwords = wildcard
 stopwords = DNS
-stopwords = subkeys
+stopwords = OpenSSH
+stopwords = ROADMAP
+stopwords = littlechef
 stopwords = runlist
+stopwords = subcommand
+stopwords = subkeys
+stopwords = subshell
 stopwords = thawer
+stopwords = wildcard
 
