updated README and META

--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,7 @@ stopwords = OpenSSH
 stopwords = ROADMAP
 stopwords = littlechef
 stopwords = runlist
+stopwords = runlists
 stopwords = subcommand
 stopwords = subkeys
 stopwords = subshell
