set bugtracker to github and updated META/README

--- a/dist.ini
+++ b/dist.ini
@@ -12,7 +12,8 @@ match = ^dev_notes/.*
 
 [@DAGOLDEN]
 :version = 0.028
-no_bugtracker = 1
+AutoMetaResources.bugtracker.github = user:dagolden
+AutoMetaResources.bugtracker.rt = 0
 stopwords = DNS
 stopwords = OpenSSH
 stopwords = ROADMAP
