fix up dist.ini, perlcritic, README

--- a/dist.ini
+++ b/dist.ini
@@ -16,14 +16,16 @@ AutoMetaResources.bugtracker.github = user:dagolden
 AutoMetaResources.bugtracker.rt = 0
 stopwords = DNS
 stopwords = OpenSSH
+stopwords = Opscode
 stopwords = ROADMAP
 stopwords = littlechef
 stopwords = runlist
 stopwords = runlists
+stopwords = subclasses
 stopwords = subcommand
 stopwords = subkeys
 stopwords = subshell
 stopwords = thawer
-stopwords = wildcard
 stopwords = webserver
+stopwords = wildcard
 
