--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -4,6 +4,9 @@ verbose = 8
 [Variables::ProhibitPunctuationVars]
 allow = $@ $!
 
+[TestingAndDebugging::ProhibitNoStrict]
+allow = refs
+
 # Turn these off
 [-BuiltinFunctions::ProhibitStringyEval]
 [-ControlStructures::ProhibitPostfixControls]
